implemented AuditLog, using queue

--- a/docker/php-apache/supervisord.conf
+++ b/docker/php-apache/supervisord.conf
@@ -24,3 +24,11 @@ stderr_logfile=/var/log/supervisor/apache_err.log
 autorestart=true
 startsecs=0
 stopwaitsecs=10
+
+[program:queue_worker]
+command=php /var/www/html/artisan queue:work rabbitmq --queue=notification-queue,test-queue --memory=256 --timeout=60 --sleep=3 --tries=3 --max-time=60
+directory=/var/www/html
+stdout_logfile=/var/log/supervisor/queue_worker.log
+stderr_logfile=/var/log/supervisor/queue_worker_err.log
+autostart=false
+autorestart=true
